# AI-logs-traces-analyzer

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  main.go  pyproject.toml  requirements.txt  vector-db.go  ww.sh
.github/workflows/: workflow.yml
app/: .dockerignore  .env  Dockerfile  README.md  config.py  go.mod  main.go  main.py
app/services/: incident_analyzer.py  ollama_trainer.py  otel_receiver.py  vector_store.py
models/: telemetry.py
oteiler-architechture/: arch.md  otelier-default-deployment.yaml  otelier-sidecar.yaml
